# Challenge_OPSIE_SISE

./: .dockerignore  .env.example  .gitignore  FONCTIONNALITES_GRAPHIQUES_COMPLET.txt  README.md  analyse_firewall_brut.html  analyse_iptables.html  analyse_iptables.ipynb  config.py  docker-compose.yml  dockerfile  generate_data.py  main.py  pyproject.toml  rapport.ipynb  requirements.txt  sample_test.csv
.streamlit/: config.toml
data/: cleaned_logs.csv  dd.ipynb  logs_export.csv
pages/: 1_Analyses.py  2_ML&interpretation.py  accueil.py  analyse.py
