[project]
name = "challenge-opsie-sise"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair<5",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "plotly>=6.5.2",
    "pyarrow>=23.0.1",
    "seaborn>=0.13.2",
    "streamlit>=1.19.0",
]
